--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.4",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "babel-jest": "^26.6.3",
+    "date-fns": "^2.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-nice-dates": "^3.1.0",
     "react-scripts": "^4.0.3",
     "react-test-renderer": "^17.0.2",
     "web-vitals": "^1.1.1"
