--- a/todo-list/package.json
+++ b/todo-list/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "babel-jest": "^26.6.3",
+    "bootstrap": "^5.0.0",
     "date-fns": "^2.21.1",
+    "dateformat": "^4.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-nice-dates": "^3.1.0",
@@ -23,8 +25,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "testcafe chrome tests/",
+    "eject": "react-scripts eject",
+    "serve": "serve -s build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +49,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "eslint-plugin-react": "^7.23.2"
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "2.2.1",
+    "serve": "^11.3.2",
+    "testcafe": "^1.14.0"
   }
 }
